DARK MODE AND LIGHT ONE DYNAMIC

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15 # SharedPreferences plugin for Flutter is used for storing user preferences.
+  provider: ^6.0.3 # Provider plugin for Flutter is used for state management.
 
 dev_dependencies:
   flutter_test:
